[workspace]
resolver = "2"
members = ["programs/*"]

[workspace.dependencies]
proc-macro2 = "1.0.95"
blake3 = "=1.8.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
light-client = { path = "../light-protocol/sdk-libs/client" }
light-program-test = { path = "../light-protocol/sdk-libs/program-test" }
light-sdk = { path = "../light-protocol/sdk-libs/sdk" }
light-token = { path = "../light-protocol/sdk-libs/token-sdk" }
light-hasher = { path = "../light-protocol/program-libs/hasher" }
