[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
devnet = ["raydium-cp-swap/devnet"]
test-sbf = ["raydium-cp-swap/test-sbf"]

[dependencies]
anchor-client = { version = "=0.31.1", features = ["async"] }
anchor-lang = { version = "=0.31.1" }
anchor-spl = { version = "=0.31.1", git = "https://github.com/lightprotocol/anchor", rev = "d8a2b3d9", features = ["memo", "metadata", "idl-build"] }

raydium-cp-swap = { path = "../programs/cp-swap", features = [
    "no-entrypoint",
    "client",
    "idl-build",
] }
solana-sdk = "2.2"
solana-client = "2.2"
solana-message = "2.2"
solana-account-decoder = "2.2"
solana-transaction-status = "2.2"
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.32"
rand = "0.9.0"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.7"
bs58 = { version = "0.5.0" }
bincode = { version = "1.3.3" }
borsh = { version = "1.5.7" }
regex = "1"
colorful = "0.3.2"
base64 = "0.21.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# light-program-test = { git = "https://github.com/lightprotocol/light-protocol", tag = "csdk-0.3.3", features = ["v2"] }
# light-client = { git = "https://github.com/lightprotocol/light-protocol", tag = "csdk-0.3.3", features = ["v2"] }
# light-compressible-client = { git = "https://github.com/lightprotocol/light-protocol", tag = "csdk-0.3.3", features = ["anchor"] }
# light-sdk = { git = "https://github.com/lightprotocol/light-protocol", tag = "csdk-0.3.3", features = ["anchor", "anchor-discriminator-compat", "v2"] }
# light-compressed-account = { git = "https://github.com/lightprotocol/light-protocol", tag = "csdk-0.3.3", features = ["anchor"] }
# light-token-client = { git = "https://github.com/lightprotocol/light-protocol", tag = "csdk-0.3.3" }

light-program-test = { path = "./../../light-protocol/sdk-libs/program-test", features = ["v2"] }
light-client = { path = "./../../light-protocol/sdk-libs/client", features = ["v2"] }
light-compressible-client = { path = "./../../light-protocol/sdk-libs/compressible-client", features = ["anchor"] }
light-sdk = { path = "./../../light-protocol/sdk-libs/sdk", features = ["anchor", "anchor-discriminator-compat", "v2"] }
light-compressed-account = { path = "./../../light-protocol/program-libs/compressed-account", features = ["anchor"] }
light-token-client = { path = "./../../light-protocol/sdk-libs/token-client" }