[package]
name = "raydium-cp-swap"
version = "0.2.0"
description = "Raydium constant product AMM, supports Token2022 and without Openbook"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-log-ix-name = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build", "light-token-sdk/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed", "idl-build"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-math = { version = "0.3", features = ["no-entrypoint"] }
uint = "0.10.0"
solana-security-txt = "1.1.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }
blake3 = { workspace = true }

light-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "5013dbe2f2abc77984a2801e69b5c46453962b31", features = ["anchor", "anchor-discriminator", "v2", "idl-build", "cpi-context"] }
light-token-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "5013dbe2f2abc77984a2801e69b5c46453962b31", features = ["anchor", "idl-build", "anchor-spl-memo", "anchor-spl-associated-token"] }
solana-account-info = "2.3"
solana-program = "2.2"
solana-pubkey = "2.2"
solana-program-error = "2.2"
solana-cpi = { version = "2.2" }
solana-msg = "2.2"

[dev-dependencies]
quickcheck = "1.0.3"
proptest = "1.0"
rand = "0.9.0"

light-program-test = { git = "https://github.com/Lightprotocol/light-protocol", rev = "5013dbe2f2abc77984a2801e69b5c46453962b31", features = ["v2", "devenv"] }
light-client = { git = "https://github.com/Lightprotocol/light-protocol", rev = "5013dbe2f2abc77984a2801e69b5c46453962b31", features = ["v2"] }
tokio = { version = "1", features = ["full"] }
spl-token = "7.0.0"
solana-keypair = { version = "2.2" }
solana-signer = { version = "2.2" }
solana-instruction = { version = "2.2" }
solana-sdk = { version = "2.3" }
bincode = "1.3"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
