[package]
name = "raydium-cp-swap"
version = "0.2.0"
description = "Raydium constant product AMM, supports Token2022 and without Openbook"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-log-ix-name = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build", "light-token/idl-build", "light-anchor-spl/idl-build", "light-anchor-spl/token_2022"]
test-sbf = []

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-math = { version = "0.3", features = ["no-entrypoint"] }
uint = "0.10.0"
solana-security-txt = "1.1.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }
blake3 = { workspace = true }

light-sdk = { git = "https://github.com/Lightprotocol/light-protocol", rev = "e6b2434ea9a0daf4c81bd829ac86e35b4528e300", features = ["anchor", "anchor-discriminator", "cpi-context"] }
light-token = { git = "https://github.com/Lightprotocol/light-protocol", rev = "e6b2434ea9a0daf4c81bd829ac86e35b4528e300", features = ["anchor"] }
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol", rev = "e6b2434ea9a0daf4c81bd829ac86e35b4528e300" }
light-anchor-spl = { version = "0.31.1", features = ["memo", "token_2022"] }
solana-account-info = "2.3"
solana-program = "2.2"
solana-pubkey = "2.2"
solana-program-error = "2.2"
solana-cpi = { version = "2.2" }
solana-msg = "2.2"

[dev-dependencies]
quickcheck = "1.0.3"
proptest = "1.0"
rand = "0.9.0"

light-program-test = { git = "https://github.com/Lightprotocol/light-protocol", rev = "e6b2434ea9a0daf4c81bd829ac86e35b4528e300" }
light-client = { git = "https://github.com/Lightprotocol/light-protocol", rev = "e6b2434ea9a0daf4c81bd829ac86e35b4528e300" }
tokio = { version = "1", features = ["full"] }
spl-token = "7.0.0"
solana-keypair = { version = "2.2" }
solana-signer = { version = "2.2" }
solana-instruction = { version = "2.2" }
solana-sdk = { version = "2.3" }
bincode = "1.3"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
